Atualiza página hercules

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,10 +41,10 @@ a:hover {
     color: navy;
 }
 
-#topo {
+#link-topo {
     color: rgb(0, 0, 219);
 }
 
-#topo:hover {
+#link-topo:hover {
     color: navy;
 }
